# chil

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  Escenario_8cpp.html  Jenkinsfile  LICENSE  README.md  README_8md.html  annotated.html  chil  classChil.html  classPaso.html  configuracion  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  globals_func.html  index.html  index.md  library.json  macros_8h_source.html  menudata.js  sonar-project.properties  stringUtils_8cpp.html  stringUtils_8h.html  stringUtils_8h_source.html
.github/workflows/: cmake.yml  pipeline.yml  sonar.yml
configuracion/: documentacion
docs/: AccionNoEjecutadaExcepcion_8h.html  AccionNoEjecutadaExcepcion_8h_source.html  AccionVerificable_8cpp.html  AccionVerificable_8h.html  AccionVerificable_8h_source.html  Chil_8cpp.html  Chil_8h.html  Chil_8h_source.html  ComparacionExcepcion_8h.html  ComparacionExcepcion_8h_source.html  EjecutorConManejoDeErrores_8cpp.html  EjecutorConManejoDeErrores_8h.html  EjecutorConManejoDeErrores_8h_source.html  EjecutorSimple_8cpp.html  EjecutorSimple_8h.html  EjecutorSimple_8h_source.html  Ejecutor_8h.html  Ejecutor_8h_source.html  Escenario_8cpp.html  Escenario_8h.html  Escenario_8h_source.html  EstrategiaDirectaConValores_8cpp.html  EstrategiaDirectaConValores_8h.html  EstrategiaDirectaConValores_8h_source.html  Estrategia_8h.html  Estrategia_8h_source.html  ExportadorJSON_8cpp.html  ExportadorJSON_8h.html  ExportadorJSON_8h_source.html  Paso_8cpp.html  Paso_8h.html  Paso_8h_source.html  Plataforma_8h.html  Plataforma_8h_source.html  PuntoDeEntrada_8cpp.html  PuntoDeEntrada_8h.html  PuntoDeEntrada_8h_source.html  Resumen_8cpp.html  Resumen_8h.html  Resumen_8h_source.html  (+85 more)
docs/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  enums_0.js  enumvalues_0.js  enumvalues_1.js  files_0.js  files_1.js  files_2.js  files_3.js  files_4.js  files_5.js  files_6.js  (+28 more)
documentacion/estatico/: header.html
ejemplos/: README.md
ejemplos/baliza-ic/: README.md
ejemplos/baliza-ic/pruebas/: .chil  .gitignore  CMakeListsUser.txt  platformio.ini
ejemplos/baliza-ic/pruebas/src/: main.cpp  pasos.h  (+2 more)
ejemplos/leds/: README.md
ejemplos/leds/fuente/: CMakeLists.txt
ejemplos/leds/pruebas/: .gitignore  CMakeLists.txt  CMakeListsUser.txt  platformio.ini
herramientas/: .chil  README.md  chil
herramientas/reporte/: ejemplo-salida  resultado.html  resultados-template.html
html/: Chil_8cpp.html  Chil_8h.html  Chil_8h_source.html  Escenario_8cpp.html  Escenario_8h.html  Escenario_8h_source.html  Paso_8cpp.html  Paso_8h.html  Paso_8h_source.html  README_8md.html  annotated.html  classChil.html  classEscenario.html  classPaso.html  classes.html  dir_2a559f84b3036e187a9af80f954dc359.html  dir_313caf1132e152dd9b58bea13a4052ca.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_80f0f503abfb39369235c25d2f6a7bf4.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  functions.html  functions_func.html  functions_vars.html  globals.html  globals_defs.html  globals_func.html  index.html  macros_8h.html  macros_8h_source.html  main_8cpp.html  menudata.js  stringUtils_8cpp.html  stringUtils_8h.html  stringUtils_8h_source.html
html/search/: all_0.js  all_4.js  all_7.js  all_8.js  all_b.js  classes_1.js  defines_0.js  defines_1.js  files_1.js  files_2.js  files_5.js  functions_3.js  functions_4.js  functions_5.js  pages_0.js  searchdata.js  variables_0.js  variables_1.js
include/: Chil.h  Dado.h  Escenario.h  Paso.h  macros.h
include/framework/: Framework.h
include/modelo/: Acciones.h  Dado.h  Escenario.h  Paso.h
include/plataforma/: Plataforma.h
plataformas/arduino/: .gitignore  CMakeLists.txt  CMakeListsPrivate.txt  CMakeListsUser.txt  correr.sh  platformio.ini
plataformas/arduino/src/: FrameworkArduino.cpp  FrameworkArduino.h  PlataformaArduino.cpp  PlataformaArduino.h
plataformas/arduino/test/: FrameworkArduinoTest.cpp  PlataformaArduinoTest.cpp
plataformas/imagenes/: platformio.Dockerfile
plataformas/modelos/: Plataforma.h  PuntoDeEntrada.cpp  PuntoDeEntrada.h
reporte/: resultado.json  resultados.html
scripts/: build.sh  desplegar-documentacion.sh  generar-documentacion.sh  generar-paquete-platformio.sh  instalar-doxygen.sh  instalar-platformio.sh  liberar-version.sh  test.sh  versionar.sh
search/: all_0.js  all_2.js  all_3.js  all_a.js  classes_2.js  files_0.js  files_3.js  functions_1.js  functions_7.js  pages_0.js
src/: Chil.cpp  Chil.h  Dado.cpp  Escenario.cpp  Paso.cpp  macros.cpp  macros.h
src/modelo/: Acciones.cpp  Dado.cpp  Escenario.cpp  Escenario.h  Paso.cpp  Paso.h  Resumen.cpp  Resumen.h
src/modelo/ejecutores/: Ejecutor.h  EjecutorConManejoDeErrores.cpp  EjecutorConManejoDeErrores.h  EjecutorSimple.cpp  EjecutorSimple.h
src/modelo/verificacion/: Verificacion.cpp  Verificacion.h
src/utilidades/: literales.cpp  literales.h
src/utilidades/exportador/: ExportadorJSON.cpp  ExportadorJSON.h
src/utils/: literales.cpp  literales.h  stringUtils.cpp  stringUtils.h
tests/: CMakeLists.txt
tests/plataformas/modelo/: PuntoDeEntradaTest.cpp
tests/src/: ChilTest.cpp  compartido-tests.h  tests.cpp
tests/src/interfaces/: PuntoDeEntradaTest.cpp
tests/src/mocks/: MockFramework.h  MockFramework.hpp  PlataformaMock.hpp
tests/src/modelo/: AccionesTest.cpp  EscenarioTest.cpp  PasoTest.cpp  ResumenTest.cpp
tests/src/modelo/exportador/: ExportadorJSON.cpp  ExportadorJSONTest.cpp
tests/src/modelo/utilidades/: literalesTest.cpp
tests/src/modelo/verificacion/: VerificacionEnBucleTest.cpp  VerificacionEntreTest.cpp  VerificacionIgualesTest.cpp  VerificacionMayorYMenorTest.cpp  VerificacionTest.cpp
(+26 files in other folders)
